--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.Aaa"
         tools:targetApi="31">
         <activity
+            android:name=".Main2Activity"
+            android:exported="false" />
+        <activity
+            android:name=".Main1Activity"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="true"
             android:label="R2F"
