--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools" >
 
     <application
         android:allowBackup="true"
@@ -11,24 +11,26 @@
         android:roundIcon="@drawable/ic_launcher_background"
         android:supportsRtl="true"
         android:theme="@style/Theme.Aaa"
-        tools:targetApi="31">
+        tools:targetApi="31" >
         <activity
-            android:name=".Main2Activity"
+            android:name=".MainActivity3"
             android:exported="false" />
         <activity
-            android:name=".Main1Activity"
+            android:name=".MainActivity2"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:exported="true"
             android:label="R2F"
-            android:theme="@style/Theme.Aaa">
+            android:theme="@style/Theme.Aaa" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".Main1Activity" />
+        <activity android:name=".Main2Activity" />
     </application>
 
 </manifest>
